2009-10-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (switch-to-completions): Look for *Completions* in other
	frames as well.

	* pcomplete.el: Allow the use of completion-tables.
	(pcomplete-std-complete): New command.
	(pcomplete-dirs-or-entries): Use a single call to pcomplete-entries.
	(pcomplete--here): Use a function for `form' rather than an expression,
	so it can be byte-compiled.
	(pcomplete-here, pcomplete-here*): Adjust accordingly.
	Add edebug declaration.
	(pcomplete-show-completions): Remove unused var `curbuf'.
	(pcomplete-do-complete, pcomplete-stub):
	Don't assume `completions' is a list of	strings any more.

2009-10-22  Juanma Barranquero  <lekktu@gmail.com>

	* find-dired.el (find-name-arg): Fix typo in docstring.

2009-10-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcmpl-linux.el (pcomplete/kill): Don't abuse pcomplete-entries.
	(pcmpl-linux-fs-types): Same, and update to new modules layout.

	* pcmpl-gnu.el (pcmpl-gnu-makefile-names): Use a single call to
	pcomplete-entries.

	* comint.el (comint-read-input-ring, comint-write-input-ring)
	(comint-substitute-in-file-name)
	(comint-dynamic-complete-as-filename)
	(comint-dynamic-simple-complete)
	(comint-dynamic-list-filename-completions)
	(comint-dynamic-list-completions)
	(comint-redirect-results-list-from-process): Minor simplifications.

2009-10-21  Kevin Ryde  <user42@zip.com.au>

	* emacs-lisp/checkdoc.el (checkdoc-file-comments-engine):
	When inserting ";;; Code" put it before any ";;;###autoload" cookie on
	the first form.  And insert a blank line after ";;; Code" since
	that's usual style.  (My Bug#4612.)

	* net/dns.el: Add "Keywords: comm", as per net/net-utils.el.

2009-10-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-table-with-terminator): Properly implement
	boundaries, in case `terminator' appears in the suffix.
	(completion--embedded-envvar-table): Don't return boundaries if
	there's no valid completion.  Simplify.